# eqx-wavenet

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
eqx_wavenet/: __init__.py  normalization.py  wavenet.py  wavenet_config.py  wavenet_head.py  wavenet_input.py  wavenet_layer.py
tests/: test_model.py  test_training_sinusoid.py
