[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eqx_wavenet*"]
namespaces = false

[project]
name = "eqx-wavenet"
version = "0.0.1"
authors = [{ name = "Pierre-Louis Nordmann" }]
description = "Wavenet implementation with Jax and Equinox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax~=0.4",
    "jaxlib~=0.4",
    "jaxtyping~=0.2.0",
    "equinox~=0.11.0",
    "pytest~=7.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
